# scratch

./: .gitignore  CMakeLists.txt  main.cpp  songMain.cpp
BackInserter/: CMakeLists.txt  main.cpp
SharedPointer/: CMakeLists.txt  main.cpp
Threads/: Basics.cpp  CMakeLists.txt  Condition.cpp  Future.cpp  Mutex.cpp  main.cpp  threads.cpp  threads.h
UniquePointer/: CMakeLists.txt  main.cpp
entity/: CMakeLists.txt  Entity.cpp  Entity.h
libEntity/: CMakeLists.txt  Entity.cpp  Entity.h  main.cpp
libMediaAssets/: CMakeLists.txt  MediaAssets.cpp  MediaAssets.h
libSong/: CMakeLists.txt
song/: CMakeLists.txt  Song.cpp  Song.h
tests/: CMakeLists.txt  EntityTests.cpp  SampleAppTests.cpp
